--- a/legacy/control
+++ b/legacy/control
@@ -2,41 +2,39 @@
 4 Ponder
 2 Lórien Revealed
 
-1 Dress Down
-
-2 Force of Negation
 4 Force of Will
+2 Force of Negation
 2 Spell Pierce
-3 Prismatic Ending
+
 4 Swords to Plowshares
+1 Prismatic Ending
 1 Supreme Verdict
 
-1 Hullbreacher
-2 Forth Eorlingas!
-2 Monastery Mentor
-1 Snapcaster Mage
+1 Search for Azcanta
+2 Day's Undoing
+2 Back To Basics
+
+2 Hullbreacher
+2 Snapcaster Mage
+1 Monastery Mentor
 
 4 Narset, Parter of Veils
 2 Teferi, Time Raveler
-1 The Wandering Emperor
+1 Jace, the Mind Sculptor
 
-4 Island
-1 Prismatic Vista
-4 Scalding Tarn
-1 Misty Rainforest
-1 Mountain
-2 Plains
+2 Prismatic Vista
+2 Scalding Tarn
 4 Flooded Strand
-2 Tundra
-1 Volcanic Island
+4 Island
+2 Plains
+1 Karakas
+1 Mystic Sanctuary
+3 Tundra
 
 Sideboard
-2 Blood Moon
-2 Containment Priest
-2 Deafening Silence
-1 Flusterstorm
-2 Pyroblast
-1 Red Elemental Blast
-1 Ruination
-2 Supreme Verdict
+3 Containment Priest
+2 Flusterstorm
+3 Blue Elemental Blast
+1 Supreme Verdict
 2 Surgical Extraction
+4 more
