--- a/legacy/control
+++ b/legacy/control
@@ -34,7 +34,11 @@
 Sideboard
 3 Containment Priest
 2 Flusterstorm
-3 Blue Elemental Blast
+1 Hydroblast
 1 Supreme Verdict
 2 Surgical Extraction
-4 more
+1 Back To Basics
+1 Rest in Peace
+2 Stony Silence
+1 Sevinne's Reclemation
+1 Terminus
